--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "vite": "^7.3.1"
   },
   "dependencies": {
-    "three": "^0.182.0"
+    "lil-gui": "^0.21.0",
+    "three": "^0.182.0",
+    "tweakpane": "^4.0.5"
   }
 }
