--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "lil-gui": "^0.21.0",
     "three": "^0.182.0",
-    "tweakpane": "^4.0.5"
+    "tweakpane": "^4.0.5",
+    "vite-plugin-glsl": "^1.5.5"
   }
 }
